route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx
  annotations:
    haproxy.router.openshift.io/balance: roundrobin
    haproxy.router.openshift.io/disable_cookies: 'true'
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: nginx
    app.kubernetes.io/version: 1.16.0
    helm.sh/chart: nginx-0.1.0
spec:
  host: nginx.<DOMAIN>
  tls: 
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  port:
    targetPort: 8080
  to:
    kind: Service
    name: nginx-vm
    weight: 100
  alternateBackends:
  - kind: Service
    name: nginx-pod
    weight: 100
